--- a/app/_templates/header.twig
+++ b/app/_templates/header.twig
@@ -2,8 +2,8 @@
   <a class="logo" href="index.html">
     <img src="./assets/images/global/logo.png" alt="" />
   </a>
-  <form id="searchHeader" class="wrapper-inputtags">
-    <div class="form-wrapper">
+  <form id="searchHeader" class=" wrapper-inputtags">
+    <div class="form-wrapper form_suggest-search">
       <div class="box-suggest">
         <div class="suggest__quick">
           <h3>Quick Searches</h3>
@@ -15,23 +15,12 @@
             <li><a href="#">HCM city</a></li>
             <li><a href="#">Thao Dien</a></li>
           </ul>
-          <!-- <ul class="suggest-list list-place">
-            <li><a href="#">HCM city</a></li>
-            <li><a href="#">Thao Dien</a></li>
-          </ul> -->
-        </div>
-        <div class="suggest__recent">
-          <h3>Recent Searches</h3>
-          <ul class="suggest-list list-recent">
-            <li><a href="#">HCM city</a></li>
-            <li><a href="#">Thao Dien</a></li>
-          </ul>
         </div>
 
       </div>
-      <!-- <input type="text" value="" id="search-header" data-role="tagsinput" /> -->
       <input type="text" value="" id="search-header" autocomplete="off" />
       <a href="#0" class="btn-submit"><i class="fa fa-search"></i></a>
+      <!-- <input type="text" value="" id="search-header" data-role="tagsinput" /> -->
       <!-- <a class="close-form" href="javascript:void(0)" ><i class="fa fa-close"></i></a> -->
     </div>
   </form>
