--- a/app/assets/css/pages/_listing.scss
+++ b/app/assets/css/pages/_listing.scss
@@ -4,7 +4,7 @@
 	margin: 20px 0;
 	width: 100%;
 	@include screen(medium){
-	margin: 50px 0 20px;
+		margin: 50px 0 20px;
 
 	}
 }
@@ -204,8 +204,6 @@
 
 .bar-request {
 	position: fixed;
-	top: -100px;
-	left: 0;
 	height: auto;
 	width: 100%;
 	background: #fff;
@@ -214,16 +212,40 @@
 	z-index: 9;
 	transition:0.5s;
 	opacity:0;
+	bottom: -100px;
+	left: 0;
+	@include screen(medium){
+		top: -100px;
+		bottom: auto;
+	}
 
 	&.show {
 		opacity:1;
-		top: 0;
+		bottom: 0;
+		@include screen(medium){
+			top: 0;
+			bottom: auto;
+		}
+	}
+	.btn {
+		@include screen(medium, false){
+			line-height: 30px;
+			font-size: 12px;
+			text-align: center;
+			height: 30px;
+
+		}
+	}
+
+	.inspect__info {
+		margin-top: 20px;
 	}
 
 
 	h3 {
 		font-size: 18px;
 		margin: 12px 0;
+		display: inline-block;
 	}
 	span {
 		margin-left: 25px;
