--- a/app/index.twig
+++ b/app/index.twig
@@ -7,19 +7,19 @@
 			<!-- <div class="item wrap-video">
 				<iframe  src="https://www.youtube.com/embed/37OHq_ByNP0" frameborder="0" allow="autoplay; encrypted-media" id="video1"></iframe>
 			</div> -->
-			<div class="item" data-text="hello Saigon">
+			<div class="item" data-text="HELLO SAIGON">
 				<img src="assets/images/dummy/home.png" />
 			</div>
-			<div class="item" data-text="Welcome To VietNam ">
+			<div class="item" data-text="Long-Term Retal Made Easy">
 				<img src="assets/images/dummy/home1.jpg" />
 			</div>
-			<div class="item" data-text="Nice to see you">
+			<div class="item" data-text="Furnished House with Amenities">
 				<img src="assets/images/dummy/home2.jpg" />
 			</div>
 		</div>
 	</div>
 	<div class="banner-wrapper text-center">
-		<h1>hello Saigon</h1>
+		<h1>HELLO SAIGON</h1>
 		<ul class="link-district hide-for-small">
 			<li>Popuplar Areas: </li>
 			<li><a href="#">district 1</a> </li>
@@ -234,16 +234,19 @@
 <section class="properties">
 	<div class="container">
 		<h2 class="section-title text-center">Feature Properties</h2>
-		<ul class="properties__tab text-center">
-			<li><a href="javascript:void(0);" data-tab="1">All</a></li>
-			<li><a href="javascript:void(0);" data-tab="2">DISTRICT 1</a></li>
-			<li class="active"><a href="javascript:void(0);" data-tab="2">DISTRICT 2</a></li>
-			<li><a href="javascript:void(0);" data-tab="3">DISTRICT 3</a></li>
-			<li><a href="javascript:void(0);" data-tab="4">DISTRICT 5</a></li>
-			<li><a href="javascript:void(0);" data-tab="5">DISTRICT 7</a></li>
-			<li><a href="javascript:void(0);" data-tab="6">BINH THANH</a></li>
-			<li><a href="javascript:void(0);" data-tab="7">PHU NHUAN</a></li>
-		</ul>
+		<div class="properties__tab select-wrapper">
+			<span>all</span>
+			<ul class=" text-center">
+				<li><a href="javascript:void(0);" data-tab="1">All</a></li>
+				<li><a href="javascript:void(0);" data-tab="2">DISTRICT 1</a></li>
+				<li class="active"><a href="javascript:void(0);" data-tab="2">DISTRICT 2</a></li>
+				<li><a href="javascript:void(0);" data-tab="3">DISTRICT 3</a></li>
+				<li><a href="javascript:void(0);" data-tab="4">DISTRICT 5</a></li>
+				<li><a href="javascript:void(0);" data-tab="5">DISTRICT 7</a></li>
+				<li><a href="javascript:void(0);" data-tab="6">BINH THANH</a></li>
+				<li><a href="javascript:void(0);" data-tab="7">PHU NHUAN</a></li>
+			</ul>
+		</div>
 		<div class="properties__content">
 			<div class="tab-content active ">
 				<div class="row">
