--- a/app/listing.twig
+++ b/app/listing.twig
@@ -4,11 +4,11 @@
 <div class="bar-request">
   <div class="container">
     <a href="#inspectionForm" data-toggle="modal" class="btn btn--red pull-right">Request Inspectation</a>
-    <h3>
+    <h3 class="hide-for-small">
       RESORT - LIKE NEW APARTMENT IN STARHILL DISTRICT 7
       <span class="price"><b>$1,200</b> per month</span>
-      <span class="bg--green tag">POPULAR <i class="fa fa-star"></i></span>
     </h3>
+    <span class="bg--green tag">POPULAR <i class="fa fa-star"></i></span>
   </div>
 </div>
 
@@ -45,14 +45,14 @@
       <div class="modal-content">
         <div class="modal-body">
           <div class="block-title">
+            <h2> Resort - like new Apartment in Starhill district 7</h2>
             <div class="house-code">
               h012345
               <span>House Code</span>
             </div>
-            <h2> Resort - like new Apartment in Starhill district 7</h2>
             <p class="locate"><i class="fa fa-map-marker"></i> District 7</p>
           </div>
-          <div class="row">
+          <div class="row inspect__info">
             <div class="col-md-6">
               <p><b>$1200</b> per month</p>
               <ul class="thumb-service thumb--col-2 thumb-overview">
@@ -124,7 +124,7 @@
 
           <h3 class="block-title"> Overview</h3>
 
-          <ul class="thumb-service thumb--col-4 thumb-overview">
+          <ul class="thumb-service thumb--4 thumb-overview">
             <li><i class="fa fa-building-o"></i> Apartment</li>  
             <li><i class="fa fa-bath"></i> 1 Bathroom(s)</li>  
             <li><i class="fa fa-bed"></i> 1 Bedroom(s)</li>  
@@ -154,7 +154,7 @@
 
           <h3 class="block-title" id="amenities">AMENITIES</h3>
 
-          <ul class="thumb-service thumb--col-4">
+          <ul class="thumb-service thumb--4">
             <li><i class="flaticon-a-airconditioned"></i><span>Air coditioner</span></li>
             <li><i class="flaticon-a-cable4"></i><span>Microwave</span></li>
             <li><i class="flaticon-a-connection30"></i><span>Internet</span></li>
@@ -178,7 +178,7 @@
           </ul>
           <h3 class="block-title" id="facilities">FACITLITIES</h3>
 
-          <ul class="thumb-service thumb--col-4">
+          <ul class="thumb-service thumb--4">
             <li><i class="flaticon-a-public6"></i><span>Community hall</span></li>
             <li><i class="flaticon-a-badminton9"></i><span>badminton court</span></li>
             <li><i class="flaticon-a-phonecall10"></i><span>Intercom</span></li>
