--- a/app/project.twig
+++ b/app/project.twig
@@ -46,6 +46,7 @@
 							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
 						</ul>
 					</div>
+					<span class="tag-cate bg--yellow">Feature <i class="fa fa-star"></i></span>
 					<span class="love"><i class="fa fa-heart-o"></i></span>
 					<span class="price-tag">$600</span>
 				</div>
@@ -68,6 +69,7 @@
 							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
 						</ul>
 					</div>
+					<span class="tag-cate bg--blue">new <i class="fa fa-bolt"></i></span>
 					<span class="love"><i class="fa fa-heart-o"></i></span>
 					<span class="price-tag">$600</span>
 				</div>
@@ -90,6 +92,7 @@
 							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
 						</ul>
 					</div>
+					<span class="tag-cate bg--green">popular <i class="fa fa-star"></i></span>
 					<span class="love"><i class="fa fa-heart-o"></i></span>
 					<span class="price-tag">$600</span>
 				</div>
@@ -112,6 +115,7 @@
 							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
 						</ul>
 					</div>
+					<span class="tag-cate bg--red">Best dealer <i class="fa fa-gift"></i></span>
 					<span class="love"><i class="fa fa-heart-o"></i></span>
 					<span class="price-tag">$600</span>
 				</div>
@@ -143,7 +147,7 @@
 		</div>
 		
 		<h3 class="block-title" id="overview">Overview</h3>
-		<ul class="thumb-service thumb--col-4">
+		<ul class="thumb-service thumb--4">
 			<li>
 				<i class="fa fa-home"></i>
 				<div class="info-fa">
@@ -221,7 +225,7 @@
 		
 		<h3 class="block-title" id="facilities">FACITLITIES</h3>
 
-		<ul class="thumb-service thumb--col-4">
+		<ul class="thumb-service thumb--4">
 			<li><i class="flaticon-a-public6"></i><span>Community hall</span></li>
 			<li><i class="flaticon-a-badminton9"></i><span>badminton court</span></li>
 			<li><i class="flaticon-a-phonecall10"></i><span>Intercom</span></li>
