--- a/app/_templates/footer.twig
+++ b/app/_templates/footer.twig
@@ -29,9 +29,9 @@
 						<h3 class="block-title"> Stay Connected</h3>
 						<p class="block-desc">Join over 3000 people who receive rental advice and best property deals</p>
 						<form>
-							<div class="form-group input-btn">
+							<div class="form-group footer__submit-email">
 								<input type="email" name="" placeholder="Your email" />
-								<button><i class="fa fa-angle-right"></i></button>
+								<button class="btn--icon"><i class="fa fa-angle-right"></i></button>
 							</div>
 						</form>
 					</div>
