--- a/app/_templates/layout.twig
+++ b/app/_templates/layout.twig
@@ -5,9 +5,9 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1,user-scalable=no">
   <title>{{ title }}</title>
-
+<!-- 
   <link rel="icon" type="image/png" href="{{assetPath}}/images/favicons/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="{{assetPath}}/images/favicons/favicon-16x16.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="{{assetPath}}/images/favicons/favicon-16x16.png" sizes="16x16" /> -->
 
   <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=vietnamese" rel="stylesheet"> -->
 
