--- a/app/assets/css/elements/_buttons.scss
+++ b/app/assets/css/elements/_buttons.scss
@@ -154,6 +154,18 @@
     min-width: 135px;
     font-size: 14px;
     padding: 0px 15px;
-
+  }
+}
+.btn--icon {
+  position: relative;
+  width: 45px; 
+  height: 45px;
+  font-size: 32px;
+  padding: 0;
+  margin: 0;
+  vertical-align: middle;
+  i {
+    @include absolute(top 50% left 50%);
+    transform:translate(-50%, -50%);
   }
 }
