--- a/app/index.twig
+++ b/app/index.twig
@@ -1,7 +1,7 @@
 {% extends "_templates/layout.twig" %}
 
 {% block page %}
-<section class="hero-banner" >
+<section class="section-hero-banner" >
 	<div class="slide-bg" data-module="SlideBg">
 		<div class="slider-wrapper">
 			<!-- <div class="item wrap-video">
@@ -189,7 +189,7 @@
 	</div>
 </section>
 
-<section class="what-have hide-for-small">
+<section class="section-what-have hide-for-small">
 	<div class="container text-center">
 		<p>
 			<span><i class="fa fa-trophy"></i> verified listing</span>
@@ -199,7 +199,7 @@
 	</div>
 </section>
 
-<section class="steps" data-module="StepSlide">
+<section class="section-steps" data-module="StepSlide">
 	<div class="container text-center">
 		<h2 class="section-title ">Hasske-Free Renting</h2>
 		<div class="slider-wrapper">
@@ -231,7 +231,7 @@
 	</div>
 </section>
 
-<section class="properties">
+<section class="section-properties">
 	<div class="container">
 		<h2 class="section-title text-center">Feature Properties</h2>
 		<div class="properties__tab select-wrapper">
@@ -801,7 +801,7 @@
 	</div>
 </section>
 
-<section class="project" data-module="SlideProject">
+<section class="section-project" data-module="SlideProject">
 	<div class="container">
 
 		<h2 class="section-title text-center">Featured Projects</h2>
@@ -863,7 +863,7 @@
 	
 </section>
 
-<section class="neighborhood" data-module="SlideNeighborhood">
+<section class="section-neighborhood" data-module="SlideNeighborhood">
 	<div class="container">
 		<h2 class="section-title text-center">Feature neighborhood</h2>
 		<div class="row slider-wrapper">
