--- a/app/listing.twig
+++ b/app/listing.twig
@@ -21,9 +21,9 @@
           <div class="col-md-8 gallery__slide" data-module="GalleryHouse">
             <ul class="slider gallery__for"></ul>
             <p class="text-left">Photo <span class="counter-slide">3/9</span>: <span class="room-name">Bath room</span><br /> Real photo taken by Hoozing</p>
-            <ul class="slider gallery__nav"></ul>
+            <ul class="slider gallery__nav hide-for-small"></ul>
           </div>
-          <div class="col-md-4 gallery__info">
+          <div class="col-md-4 gallery__info hide-for-small">
             <h3>house name</h3>
             <ul class="thumb-service thumb--col-2">
               <li><i class="fa fa-map-marker"></i> District 7</li>
