--- a/app/search-page.twig
+++ b/app/search-page.twig
@@ -335,7 +335,7 @@
 
       <div class="jplist-panel">
 
-        <span data-type="<b>{all} Listing </b>" data-control-type="pagination-info" data-control-name="paging" data-control-action="paging"></span>
+        <span data-type="<b class='list-count'>{all} Listing </b>" data-control-type="pagination-info" data-control-name="paging" data-control-action="paging"></span>
 
         Sort by
         <div class="jplist-drop-down" data-control-type="sort-drop-down" data-control-name="sort" data-control-action="sort"> 
@@ -364,7 +364,9 @@
         <div class="jplist-drop-down" data-control-type="items-per-page-drop-down" data-control-name="paging" data-control-action="paging" data-control-animate-to-top="true">
           <ul>
             <li><span data-number="2"> 2 per page </span></li>
-            <li><span data-number="4" data-default="true"> 4 per page </span></li>
+            <li><span data-number="4"> 4 per page </span></li>
+            <li><span data-number="5" data-default="true"> 5 per page </span></li>
+            <li><span data-number="6"> 6 per page </span></li>
             <li><span data-number="all"> View All </span></li>
           </ul>
         </div>
@@ -376,6 +378,118 @@
       <div class=" tab-content active" id="search-list">
         <div class="row list-box">
 
+          <div class="thumb-item col-md-6" data-date="03/03/2017" data-code="mh021" data-lng="106.67094305726" data-lat="10.750648587535" data-city="Ho Chi Minh">
+            <div class="thumb-gallery " data-module="ThumbSlide">
+              <ul class="thumb-list slider-wrapper">
+                <li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
+                <li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+                <li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+              </ul>
+              <span class="love"><i class="fa fa-heart-o"></i></span>
+              <span class="price-tag">600</span>
+            </div>
+            <div class="thumb-info">
+              <h4><a href="javascript:void(0)" class="select-home">house code mh021</a></h4>
+
+              <h3>
+                <a href="#">a Pretty service appartment with bright bedroom</a>
+              </h3>
+              <div class="thumb-service">
+                <span><i class="fa fa-map-marker"></i> District 7</span>
+                <span><i class="fa fa-bed"></i> 1 bed </span>
+                <span><i class="fa fa-bath"></i> 1 bath</span>
+                <div class="service-more">
+                  <span><i class="fa fa-map-marker"></i> District 7</span>
+                  <span><i class="fa fa-bed"></i> 1 bed </span>
+                  <span><i class="fa fa-bath"></i> 1 bath</span>
+                </div>            
+              </div>
+            </div>
+          </div>
+          <div class="thumb-item col-md-6" data-date="03/03/2017" data-code="mh021" data-lng="106.67094305726" data-lat="10.750648587535" data-city="Ho Chi Minh">
+            <div class="thumb-gallery " data-module="ThumbSlide">
+              <ul class="thumb-list slider-wrapper">
+                <li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
+                <li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+                <li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+              </ul>
+              <span class="love"><i class="fa fa-heart-o"></i></span>
+              <span class="price-tag">600</span>
+            </div>
+            <div class="thumb-info">
+              <h4><a href="javascript:void(0)" class="select-home">house code mh021</a></h4>
+
+              <h3>
+                <a href="#">a Pretty service appartment with bright bedroom</a>
+              </h3>
+              <div class="thumb-service">
+                <span><i class="fa fa-map-marker"></i> District 7</span>
+                <span><i class="fa fa-bed"></i> 1 bed </span>
+                <span><i class="fa fa-bath"></i> 1 bath</span>
+                <div class="service-more">
+                  <span><i class="fa fa-map-marker"></i> District 7</span>
+                  <span><i class="fa fa-bed"></i> 1 bed </span>
+                  <span><i class="fa fa-bath"></i> 1 bath</span>
+                </div>            
+              </div>
+            </div>
+          </div>
+          <div class="thumb-item col-md-6" data-date="03/03/2017" data-code="mh021" data-lng="106.67094305726" data-lat="10.750648587535" data-city="Ho Chi Minh">
+            <div class="thumb-gallery " data-module="ThumbSlide">
+              <ul class="thumb-list slider-wrapper">
+                <li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
+                <li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+                <li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+              </ul>
+              <span class="love"><i class="fa fa-heart-o"></i></span>
+              <span class="price-tag">600</span>
+            </div>
+            <div class="thumb-info">
+              <h4><a href="javascript:void(0)" class="select-home">house code mh021</a></h4>
+
+              <h3>
+                <a href="#">a Pretty service appartment with bright bedroom</a>
+              </h3>
+              <div class="thumb-service">
+                <span><i class="fa fa-map-marker"></i> District 7</span>
+                <span><i class="fa fa-bed"></i> 1 bed </span>
+                <span><i class="fa fa-bath"></i> 1 bath</span>
+                <div class="service-more">
+                  <span><i class="fa fa-map-marker"></i> District 7</span>
+                  <span><i class="fa fa-bed"></i> 1 bed </span>
+                  <span><i class="fa fa-bath"></i> 1 bath</span>
+                </div>            
+              </div>
+            </div>
+          </div>
+          <div class="thumb-item col-md-6" data-date="03/03/2017" data-code="mh021" data-lng="106.67094305726" data-lat="10.750648587535" data-city="Ho Chi Minh">
+            <div class="thumb-gallery " data-module="ThumbSlide">
+              <ul class="thumb-list slider-wrapper">
+                <li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
+                <li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+                <li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+              </ul>
+              <span class="love"><i class="fa fa-heart-o"></i></span>
+              <span class="price-tag">600</span>
+            </div>
+            <div class="thumb-info">
+              <h4><a href="javascript:void(0)" class="select-home">house code mh021</a></h4>
+
+              <h3>
+                <a href="#">a Pretty service appartment with bright bedroom</a>
+              </h3>
+              <div class="thumb-service">
+                <span><i class="fa fa-map-marker"></i> District 7</span>
+                <span><i class="fa fa-bed"></i> 1 bed </span>
+                <span><i class="fa fa-bath"></i> 1 bath</span>
+                <div class="service-more">
+                  <span><i class="fa fa-map-marker"></i> District 7</span>
+                  <span><i class="fa fa-bed"></i> 1 bed </span>
+                  <span><i class="fa fa-bath"></i> 1 bath</span>
+                </div>            
+              </div>
+            </div>
+          </div>
           <div class="thumb-item col-md-6" data-date="03/03/2017" data-code="mh021" data-lng="106.67094305726" data-lat="10.750648587535" data-city="Ho Chi Minh">
             <div class="thumb-gallery " data-module="ThumbSlide">
               <ul class="thumb-list slider-wrapper">
@@ -688,7 +802,7 @@
       </div>
     </div>
 
-    <div class="map-result show" data-module="MapResult">
+    <div class="map-result show hide-for-small" data-module="MapResult">
       <div id="map" style="height: 100vh"></div>
     </div>
   </div>
