--- a/app/assets/css/elements/_modal.scss
+++ b/app/assets/css/elements/_modal.scss
@@ -6,18 +6,20 @@
   margin: 6% auto 0;
 }
 .modal-dialog {
-  max-width: 80%;
   color: #fff;
+  @include screen(medium){
+    max-width: 80%;
+  }
   
   .slick-arrow {
     font-size: 0;
     position: absolute;
     top: -350%;
-    right: -40px;
     z-index: 10;
+    right: 0;
   }
   .slick-prev {
-    left: -40px;
+    left: 0;
   }
   h3 {
     text-transform: none;
@@ -96,15 +98,32 @@
     margin: 0 auto;
     background: #fff;
     color: #333;
-    padding: 20px 40px;
-  }
-  .row {
-    width: 100%;
+    padding: 20px 10px;
+    @include screen(medium){
+      padding: 20px 40px;
+    }
   }
   .thumb-service {
     color: #333;
   }
+  .house-code {
+    @include screen(medium){
+      @include absolute(top right);
+    }
+  }
+  .locate {
+    font-size: 16px;
+  }
+
+  .block-title {
+    margin: 0;
+    position: relative;
+  }
   h2 {
-    font-size: 22px;
+    font-size: 18px;
+    @include screen(medium){
+      padding-right: 130px;
+      font-size: 22px;
+    }
   }
 }
